testsuite/tests/deriving/should_fail/T4846.stderr

T4846.hs:29:1: error:
    Couldn't match type ‘Bool’ with ‘BOOL’
      arising from a use of ‘coerce’
    In the expression: coerce (mkExpr :: Expr Bool) :: Expr BOOL
    In an equation for ‘mkExpr’:
        mkExpr = coerce (mkExpr :: Expr Bool) :: Expr BOOL
    When typechecking the code for ‘mkExpr’
      in a derived instance for ‘B BOOL’:
      To see the code I am typechecking, use -ddump-deriv
    In the instance declaration for ‘B BOOL’
